fixes in navbar and spacing

--- a/src/app/components/Navbar/Navbar.css
+++ b/src/app/components/Navbar/Navbar.css
@@ -10,6 +10,7 @@
 }
 .logo {
   width: 103px;
+  /* border: 2px solid red; */
 }
 .left-nav {
   width: 1440px;
@@ -29,7 +30,6 @@
   /* text-transform: uppercase; */
   text-align: center;
   text-decoration: none;
-  /* border: 2px solid red; */
   width: 81px;
   color: #404040;
   padding: 8px 2px 8px 2px;
@@ -130,7 +130,7 @@
   width: 100%;
 }
 
-@media only screen and (max-width: 1290px) and (min-width: 760px) {
+@media only screen and (min-width: 760px) {
   .right-nav {
     margin-left: -10px;
   }
@@ -139,24 +139,17 @@
   }
   .logo {
     margin-right: 0rem;
-    width: 10%;
   }
   .nav {
     justify-content: space-between;
     gap: 2rem;
   }
   .nav-details {
-    width: 376px;
+    width: 514px;
     margin-left: -40px;
-    transition: all 300ms ease-in;
-    /* border: 2px solid red; */
     height: 100%;
     justify-content: space-between;
     align-items: center;
-  }
-  .nav-res {
-    display: none;
-    transition: display 300ms ease-in;
   }
 }
 @media only screen and (max-width: 768px) {
@@ -200,7 +193,7 @@
   .nav-details {
     width: 98%;
     border-bottom: 2px solid #ececec;
-    height: 78%;
+    height: 75%;
     justify-content: flex-start;
     flex-direction: column;
     align-items: baseline;
@@ -212,7 +205,7 @@
     height: 36px;
     position: absolute;
     right: 33px;
-    bottom: 18px;
+    bottom: 22px;
   }
   .navbar .nav {
     display: none;
@@ -279,7 +272,7 @@
   .nav-details {
     width: 100%;
     border-bottom: none;
-    height: 71%;
+    height: 80%;
     padding-inline: 9px;
     justify-content: space-between;
     flex-direction: column;
@@ -336,8 +329,7 @@
   .nav-res {
     padding-left: 0;
     padding-right: 0;
-    height: 625px;
-    height: 425px;
+    height: 400px;
   }
   .logo {
     width: 73px;
