--- a/src/app/components/Section-2/Section2.css
+++ b/src/app/components/Section-2/Section2.css
@@ -105,6 +105,7 @@
   .heading-sec2 {
     width: 370px;
     height: 104px;
+    margin-top: 84px;
   }
   .part-1 {
     display: flex;
