--- a/src/app/components/Sections/SectionsInfo.css
+++ b/src/app/components/Sections/SectionsInfo.css
@@ -104,13 +104,13 @@
     flex-direction: column;
     height: 650px;
     width: 100%;
-    margin-top: -0px;
+    margin-top: 50px;
     align-items: center;
     justify-content: flex-end;
     /* border: 2px solid red; */
   }
   .part:nth-child(2) {
-    margin-top: 100px;
+    margin-top: 65px;
   }
   .part:nth-child(3) {
     margin-top: 140px;
@@ -198,6 +198,9 @@
   }
 }
 @media only screen and (max-width: 480px) and (min-width: 375px) {
+  .part {
+    margin-top: 0px;
+  }
   .applicantModel {
     width: 100%;
     height: 412px;
