--- a/src/app/components/Slider/Slider.css
+++ b/src/app/components/Slider/Slider.css
@@ -205,7 +205,7 @@
   .description {
     width: 90%;
     /* border: 2px solid red; */
-    margin-top: -163px;
+    margin-top: -144px;
   }
   .animated-description {
     width: 90%;
@@ -247,7 +247,7 @@
     width: 100%;
   }
   .img {
-    width: 386px;
+    /* width: 386px; */
     height: 344.71px;
   }
   .slider-btn {
@@ -258,7 +258,7 @@
   .active-img {
     width: 85%;
     height: 377px;
-    transform: translateX(74px);
+    transform: translateX(41px);
     object-fit: contain;
   }
   .not-active-img {
@@ -289,6 +289,26 @@
     width: 85%;
     /* border: 2px solid red; */
     margin-top: -106px;
+  }
+  .active-img {
+    width: 346px;
+    height: 216px;
+    transform: translateX(93px);
+    object-fit: contain;
+  }
+  .img {
+    height: 216px;
+  }
+  .slider-btn {
+    width: 77%;
+    top: -247.68px;
+  }
+  .swiper-pagination {
+    transform: translateY(-285px);
+  }
+  .description {
+    width: 95%;
+    margin-top: -222px;
   }
 }
 @media only screen and (max-width: 375px) {
