--- a/src/app/page.css
+++ b/src/app/page.css
@@ -30,7 +30,7 @@
 }
 @media only screen and (max-width: 1100px) and (min-width: 765px) {
   .typing-box {
-    width: 100%;
+    width: 90%;
     height: 122px;
     gap: 36px;
     margin-bottom: 0;
@@ -62,7 +62,7 @@
     /* border: 2px solid red; */
   }
   .typing-animation {
-    width: 100%;
+    width: 90%;
     height: 144px;
     /* border: 2px solid red; */
     font-size: 44px;
