--- a/src/components/SearchBar.css
+++ b/src/components/SearchBar.css
@@ -69,7 +69,7 @@
 }
 @media only screen and (max-width: 768px) and (min-width: 375px) {
   .search-box {
-    width: 98%;
+    width: 95%;
     margin-top: 1.5rem;
   }
   .search-input {
@@ -103,7 +103,7 @@
 }
 @media only screen and (max-width: 343px) {
   .search-box {
-    width: 100%;
+    width: 95%;
   }
   .search-input {
     width: 100%;
